syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.distledgerserver;

import "DistLedgerCommonDefinitions.proto";

// Cross-server interface of the DistLedger Service (only for phases 2 & 3 of the project)

message PropagateStateRequest {
  LedgerState ledger = 1;
  repeated int32 replicaTS = 2;
  int32 replicaId = 3;
}

message PropagateStateResponse {}

message CheckServerStatusRequest {}

message CheckServerStatusResponse {
  bool isActive = 1;
}

service DistLedgerCrossServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
  rpc checkServerStatus(CheckServerStatusRequest) returns (CheckServerStatusResponse);
}